--- a/templates/restic-remote-@.service.d/defaults.env.j2
+++ b/templates/restic-remote-@.service.d/defaults.env.j2
@@ -12,3 +12,4 @@
 
 SSH_USER={{ restic_remote_client_user }}
 SSH_REMOTE_LISTEN_PORT={{ restic_remote_client_port }}
+SSH_PORT={{ restic_remote_ssh_port }}
