Set strict defaults, as they are "defaulted" in the other roles.
There was an issue where this _defaults_ file would be overridden with
a hosts custom values, if run against this single host with
'ansible-playbook --limit=host.example.tld', or even if the first host
of the running batch has custom values.

This is of course not what this file intends to do.

--- a/templates/restic-remote-@.service.d/defaults.env.j2
+++ b/templates/restic-remote-@.service.d/defaults.env.j2
@@ -10,6 +10,6 @@
 # https://www.freedesktop.org/software/systemd/man/systemd.exec.html#EnvironmentFile=
 ###
 
-SSH_USER={{ restic_remote_client_user }}
-SSH_REMOTE_LISTEN_PORT={{ restic_remote_client_port }}
-SSH_PORT={{ restic_remote_ssh_port }}
+SSH_USER=restic
+SSH_REMOTE_LISTEN_PORT=3000
+SSH_PORT=22
